--- a/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview.scss
+++ b/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview.scss
@@ -13,62 +13,45 @@
             }
             font-size: 1.25rem;
         }
-    } 
+    }
+
+    .basket-preview-content
+    {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+
+        @include media-breakpoint-only(sm) {
+            flex-direction: row;
+        }
+    }
 
     .list{
 	    display: flex;
 	    flex-flow: column nowrap;
-    	flex: 0 1 auto;
+    	flex: 1;
         overflow: auto;
 
-        @include media-breakpoint-up(md) {
-            max-height: calc(100vh - 345px);
+        @include media-breakpoint-only(sm) {
             margin-bottom: 5px;
-        }
-
-        @include media-breakpoint-down(xs) {
-            max-height: calc(100vh - 375px);
-            margin-bottom: 5px;
-        }
-
-        .cmp-basket-preview-list {
-            .split-basket-height {
-                @include media-breakpoint-only(sm) {
-                    height: calc(100vh - 70px);
-                    overflow: auto;
-                }
-            }
         }
     }
 
     .totals{
-    	flex: 1 0 auto;
 	    display: flex;
 	    flex-flow: column nowrap;
         border-top: 1px solid $gray-lighter;
-        
+
         @extend .small;
 
         dd, dt{
             margin-bottom: 0;
         }
 
-        @include media-breakpoint-down(xs) {
-            position: fixed;
-            bottom: 0;
-        }
-
-        @include media-breakpoint-up(sm) {
-            height: 100vh;
-        }
-
         @include media-breakpoint-only(sm) {
-            border-top: 0 !important;
+            border-top: 0;
+            border-left: 1px solid $gray-lighter;
         }
-    }
-
-    .basket-preview-footer {
-
     }
 }
 
