--- a/resources/views/Basket/Components/BasketPreview.twig
+++ b/resources/views/Basket/Components/BasketPreview.twig
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <div class="row p-l-1 p-r-1">
+        <div class="basket-preview-content row p-l-1 p-r-1">
             <!-- BASKET LIST -->
             <div class="list col-sm-7 col-md-12 p-t-1">
                 <div class="cmp cmp-basket-preview-list">
