REMOVE calculated basket preview top offset

--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -218,7 +218,7 @@
 
         if ( !!header )
         {
-            window.calculateBodyOffset = function calculateBodyOffset()
+            function calculateBodyOffset()
             {
                 if ( header.classList.contains('pos-f-t'))
                 {
@@ -228,15 +228,8 @@
                     {
                         bodyOffset += children[i].getBoundingClientRect().height;
                     }
-                    
-                    if(document.getElementById('vue-app').classList.contains('open-right') && window.matchMedia("(max-width: 991px)").matches)
-                    {
-                        document.getElementById('vue-app').style.marginTop = '0px';
-                    }
-                    else
-                    {
-                        document.getElementById('vue-app').style.marginTop = bodyOffset + 'px';
-                    }         
+
+                    document.getElementById('vue-app').style.marginTop = bodyOffset + 'px';       
                 }
             }
 
