add no index in some cases

--- a/resources/views/Basket/Components/AddItemToBasketOverlay.twig
+++ b/resources/views/Basket/Components/AddItemToBasketOverlay.twig
@@ -67,11 +67,11 @@
                     <div class="modal-footer">
                         <div class="row">
                             <div class="col-sm-8 offset-sm-2 item-confirm-special-case-close">
-                                <a v-waiting-animation-infinite href="{{ urls.basket }}" class="btn btn-primary btn-medium btn-m-r btn-outline-primary">
+                                <a v-waiting-animation-infinite href="{{ urls.basket }}" rel="nofollow" class="btn btn-primary btn-medium btn-m-r btn-outline-primary">
                                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                     {{ trans("Ceres::Template.singleItemBasket") }}
                                 </a>
-                                <a v-waiting-animation-infinite href="{{ urls.checkout }}" class="btn btn-primary btn-medium">
+                                <a v-waiting-animation-infinite href="{{ urls.checkout }}" rel="nofollow" class="btn btn-primary btn-medium">
                                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                                     {{ trans("Ceres::Template.singleItemCheckout") }}
                                 </a>
