--- a/resources/views/StaticPages/PageNotFound.twig
+++ b/resources/views/StaticPages/PageNotFound.twig
@@ -4,6 +4,8 @@
 
 {% block PartialHead %}
     <title>404 | {{ trans("Ceres::Template.headerCompanyName") }}</title>
+    <meta name="robots" content="NOINDEX">
+
 {% endblock %}
 
 {% block PageBody %}
