--- a/resources/views/WishList/Components/WishListCount.twig
+++ b/resources/views/WishList/Components/WishListCount.twig
@@ -1,5 +1,5 @@
 <script type="x/template" id="vue-wish-list-count">
-    <a href="{{ urls.wishList }}">
+    <a href="{{ urls.wishList }}" rel="nofollow">
         <span class="badge-right">${wishListCount}</span>
         <i class="fa" :class="{'fa-heart-o': !wishListCount, 'fa-heart': wishListCount}" aria-hidden="true"></i>
     </a>
