--- a/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupDE.twig
@@ -9,7 +9,7 @@
             <div class="col-xs-12 col-sm-4">
                 <div class="input-unit"
                     {% if "billing_address.salutation" in addressFieldsRequired %}data-validate{% endif %}>
-                    <salutation-select template="#vue-salutation-select" :address-type="addressType" :address-data="value" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
+                    <salutation-select template="#vue-salutation-select" :address-type="addressType" :address-data="value" @input="emitInputEvent($event.field, $event.value)" data-autofocus tabindex="-1"></salutation-select>
                     <label :for="'txtSalutation' + _uid">{{ trans("Ceres::Template.addressSalutation") }}{% if "billing_address.salutation" in addressFieldsRequired %}*{% endif %}</label>
                 </div>
             </div>
@@ -23,7 +23,7 @@
             <div class="col-xs-12 col-sm-6" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
                 <div class="input-unit"
                     {% if "billing_address.name1" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="name1">
-                    <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)">
+                    <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
                     <label :for="'txtCompany' + _uid">{{ trans("Ceres::Template.addressCompany") }}{% if "billing_address.name1" in addressFieldsRequired %}*{% endif %}</label>
                 </div>
             </div>
@@ -33,7 +33,7 @@
             <div class="col-xs-12 col-sm-6" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
                 <div class="input-unit"
                      {% if "billing_address.vatNumber" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="vatNumber">
-                    <input type="text" name="vatNumber" :id="'txtVatNumber' + _uid" :value="value.vatNumber"  @input="emitInputEvent('vatNumber', $event.target.value)">
+                    <input type="text" name="vatNumber" :id="'txtVatNumber' + _uid" :value="value.vatNumber"  @input="emitInputEvent('vatNumber', $event.target.value)" data-autofocus>
                     <label :for="'txtVatNumber' + _uid">{{ trans("Ceres::Template.addressVatNumber") }}{% if "billing_address.vatNumber" in addressFieldsRequired %}*{% endif %}</label>
                 </div>
             </div>
@@ -48,7 +48,7 @@
             <div class="col-xs-12 col-sm-4">
                 <div class="input-unit"
                      {% if "billing_address.title" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="title">
-                    <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title"  @input="emitInputEvent('title', $event.target.value)">
+                    <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title"  @input="emitInputEvent('title', $event.target.value)" data-autofocus>
                     <label :for="'txtTitle' + _uid">{{ trans("Ceres::Template.addressTitle") }}{% if "billing_address.title" in addressFieldsRequired %}*{% endif %}</label>
                 </div>
             </div>
@@ -56,14 +56,14 @@
 
         <div class="col-xs-12 col-sm-4">
             <div class="input-unit" data-validate="text" data-model="name2">
-                <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2"  @input="emitInputEvent('name2', $event.target.value)">
+                <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2"  @input="emitInputEvent('name2', $event.target.value)" data-autofocus>
                 <label :for="'txtFirstName' + _uid">{{ trans("Ceres::Template.addressFirstName") }}*</label>
             </div>
         </div>
 
         <div class="col-xs-12 col-sm-4">
             <div class="input-unit" data-validate="text" data-model="name3">
-                <input type="text" name="lastName" :id="'txtLastName' + _uid" :value="value.name3" @input="emitInputEvent('name3', $event.target.value)">
+                <input type="text" name="lastName" :id="'txtLastName' + _uid" :value="value.name3" @input="emitInputEvent('name3', $event.target.value)" data-autofocus>
                 <label :for="'txtLastName' + _uid">{{ trans("Ceres::Template.addressLastName") }}*</label>
             </div>
         </div>
