--- a/resources/views/Customer/Components/GuestLogin.twig
+++ b/resources/views/Customer/Components/GuestLogin.twig
@@ -1,20 +1,28 @@
 <script type="x/template" id="vue-guest-login">
     <div>
-        <form :id="'guest-login-form-' +_uid" class="m-b-1">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="input-unit" data-validate="mail">
-                        {% set uid_mail = uid() %}
-                        <input type="email" name="email" id="{{ uid_mail }}" v-model="email">
-                        <label for="{{ uid_mail }}">{{ trans("Ceres::Template.loginEmail") }}*</label>
+        <form :id="'guest-login-form-' +_uid" class="m-b-1 login-pwd-reset">
+            <div class="modal fade" id="guestLogin" tabindex="-1" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <div class="modal-title h3">{{ trans("Ceres::Template.loginOrderAsGuest") }}</div>
+                        </div>  
+                        <div class="modal-body">
+                            <div class="input-unit" data-validate="mail">
+                                {% set uid_mail = uid() %}
+                                <input type="email" name="email" id="{{ uid_mail }}" v-model="email" data-autofocus>
+                                <label for="{{ uid_mail }}">{{ trans("Ceres::Template.loginEmail") }}*</label>
+                            </div>
+                            <span class="error-msg">{{ trans("Ceres::Template.loginEnterConfirmEmail") }}</span>
+                        </div>       
+                        <div class="modal-footer">
+                            <button @click.prevent="validate" :disabled="isDisabled" class="btn btn-primary btn-medium pull-xs-right">
+                                <i v-waiting-animation="isDisabled" class="fa fa-arrow-right" aria-hidden="true"></i>
+                                {{ trans("Ceres::Template.loginNext") }}
+                            </button>
+                        </div>
                     </div>
-                </div>
-
-                <div class="col-xs-4 offset-xs-8">
-                    <button @click.prevent="validate" :disabled="isDisabled" class="btn btn-primary btn-medium pull-xs-right">
-                        <i v-waiting-animation="isDisabled" class="fa fa-arrow-right" aria-hidden="true"></i>
-                        {{ trans("Ceres::Template.loginNext") }}
-                    </button>
                 </div>
             </div>
         </form>
