--- a/resources/views/Customer/Components/LoginView.twig
+++ b/resources/views/Customer/Components/LoginView.twig
@@ -5,10 +5,12 @@
 
 <script type="x/template" id="vue-login-view" >
     <div class="container-max login">
-        <guest-login template="#vue-guest-login"></guest-login>
+
+        <guest-login template="#vue-guest-login" backlink="{{ backlink | url_encode }}"></guest-login>
+
         <div class="row m-b-3">
             <div class="col-sm-10 offset-sm-1 col-md-6 offset-md-3">
-
+            
                 <div>
                     <h1 class="login-view-title m-b-3">{{ trans("Ceres::Template.login") }}</h1>
                     <login template="#vue-login" backlink="{{ backlink | url_encode }}" has-to-forward="true"></login>
