--- a/resources/views/MyAccount/Components/BankDataSelect.twig
+++ b/resources/views/MyAccount/Components/BankDataSelect.twig
@@ -80,7 +80,7 @@
                                     <div class="row">
                                         <div class="col-xs-12">
                                             <div class="input-unit accountOwner" data-validate="text">
-                                                <input type="text" name="kontoinhaber" v-model="updateBankData.accountOwner">
+                                                <input type="text" name="kontoinhaber" v-model="updateBankData.accountOwner" data-autofocus>
                                                 <label :for="'txt_firma' + _uid">{{ trans("Ceres::Template.myAccountHolder") }}*</label>
                                             </div>
                                         </div>
