--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupGB.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupGB.twig
@@ -24,7 +24,7 @@
             <div class="col-xs-12 col-sm-6" {% if "delivery_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
                 <div class="input-unit"
                      {% if "delivery_address.name1" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="name1">
-                    <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)">
+                    <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
                     <label :for="'txtCompany' + _uid">{{ trans("Ceres::Template.addressCompany") }}{% if "delivery_address.name1" in addressFieldsRequired %}*{% endif %}</label>
                 </div>
             </div>
@@ -40,7 +40,7 @@
             <div class="col-xs-12 col-sm-4">
                 <div class="input-unit"
                      {% if "delivery_address.title" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="title">
-                    <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title"  @input="emitInputEvent('title', $event.target.value)">
+                    <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title"  @input="emitInputEvent('title', $event.target.value)" data-autofocus>
                     <label :for="'txtTitle' + _uid">{{ trans("Ceres::Template.addressTitle") }}{% if "delivery_address.title" in addressFieldsRequired %}*{% endif %}</label>
                 </div>
             </div>
@@ -48,7 +48,7 @@
 
         <div class="col-xs-12 col-sm-4">
             <div class="input-unit" data-validate="text" data-model="name2">
-                <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2" @input="emitInputEvent('name2', $event.target.value)">
+                <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2" @input="emitInputEvent('name2', $event.target.value)" data-autofocus>
                 <label :for="'txtFirstName' + _uid">{{ trans("Ceres::Template.addressFirstName") }}*</label>
             </div>
         </div>
