--- a/resources/views/MyAccount/Components/AccountSettings.twig
+++ b/resources/views/MyAccount/Components/AccountSettings.twig
@@ -35,7 +35,7 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="input-unit">
-                                        <input type="password" name="new_password" v-model="newPassword">
+                                        <input type="password" name="new_password" v-model="newPassword" data-autofocus>
                                         <label for="new_password">{{ trans("Ceres::Template.myAccountNewPassword") }}</label>
                                     </div>
                                 </div>
