After review changes

--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -131,7 +131,7 @@
         <!-- ./BASKET MODAL -->
 
         <!-- PASSWORD RESET MODAL -->
-        <forgot-password-modal template="#vue-forgot-password-modal"></forgot-password-modal>
+        <forgot-password-modal></forgot-password-modal>
         <!-- ./PASSWORD RESET MODAL -->
 
         <!-- SHIPPINGCOSTS MODAL -->
