--- a/resources/views/Basket/Macros/AddToBasket.twig
+++ b/resources/views/Basket/Macros/AddToBasket.twig
@@ -25,7 +25,7 @@
             :use-large-scale="{{ useLargeScale | default(false) | json_encode }}"
             :show-quantity="{{ showQuantity | default(false) | json_encode }}"
             :item-url="{{ itemObject }} | itemURL"
-            {% for key, value in options %}
+            {% for key, value in options if value is defined and value | length > 0 %}
             :{{ key }}="{{ value }}"
             {% endfor %}
     >
