Clear margin of shop builder containers

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -137,7 +137,7 @@
 {% else %}
     <div class="footer container-max">
         <div class="row">
-            <div class="col">
+            <div class="col clearfix">
                 {{ footerContainer | raw }}
             </div>
         </div>
