--- a/resources/views/Item/Components/VariationSelect.twig
+++ b/resources/views/Item/Components/VariationSelect.twig
@@ -14,5 +14,19 @@
                 <label v-tooltip="isTextCut(attribute.name)" data-toggle="tooltip" data-placement="top" :title="attribute.name">${ attribute.name }</label>
             </div>
         </div>
+
+        <div class="col-xs-12 col-md-6 col-lg-4 variation-select" v-for="(unit, unitId) in variationUnits" v-if="possibleUnitIds.length > 0">
+            <div class="input-unit" ref="labelBoxRef">
+                <select class="custom-select text-gray-dark" v-model="selectedUnitId" @change="onSelectionChange(possibleUnitIds[selectedUnitId])">
+                    <option :value="null">{{ trans("Ceres::Template.singleItemPleaseSelect") }}</option>
+                    <option
+                            v-for="unitCombinationId in possibleUnitIds"
+                            :value="unitCombinationId">
+                        ${ unitCombinationId }
+                    </option>
+                </select>
+                <label v-tooltip="isTextCut(unit.name)" data-toggle="tooltip" data-placement="top" title="unit.name">${ unit.name }</label>
+            </div>
+        </div>
     </div>
 </script>
